--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "module",
     "scripts": {
         "build-demo": "mkdir -p ./build/demo && cp -r ./demo ./build/ && cp ./node_modules/three/build/three.module.js ./build/demo/lib/three.module.js",
-        "build-library": "npx rollup -c && mkdir -p ./build/demo/lib && cp ./build/gaussian-splats-3d.module.* ./build/demo/lib/",
+        "build-library": "npx rollup -c && node -e \"const fs = require('fs'); if (!fs.existsSync('./build/demo/lib')) fs.mkdirSync('./build/demo/lib', { recursive: true });\" && copyfiles ./build/gaussian-splats-3d.module.* ./build/demo/lib/",
         "build": "npm run build-library && npm run build-demo",
         "build-demo-windows": "(if not exist \".\\build\\demo\" mkdir .\\build\\demo) && xcopy /E .\\demo .\\build\\demo && xcopy .\\node_modules\\three\\build\\three.module.js .\\build\\demo\\lib\\",
         "build-library-windows": "npx rollup -c && (if not exist \".\\build\\demo\\lib\" mkdir .\\build\\demo\\lib) && copy .\\build\\gaussian-splats-3d* .\\build\\demo\\lib\\",
@@ -24,7 +24,7 @@
         "fix-js": "npx eslint src --fix",
         "lint": "npx eslint 'src/**/*.js' || true",
         "prettify": "npx prettier --write 'src/**/*.js'",
-        "predeploy": "npm run build",
+        "predeploy": "npm run build-windows",
         "deploy": "gh-pages -d build"
     },
     "watch": {
@@ -58,6 +58,7 @@
         "@rollup/plugin-terser": "0.4.4",
         "@rollup/pluginutils": "5.0.5",
         "babel-loader": "9.1.3",
+        "copyfiles": "^2.4.1",
         "eslint": "8.47.0",
         "eslint-config-google": "0.14.0",
         "file-loader": "6.2.0",
